# CSTutor

./: .gitignore  Build.sh  CMakeLists.txt  TEST.out  dict  dict.txt  freqDict.txt
AdventOfCode2020/Python/: Day1.py  Day2.py  Day3.py  Day5.py  Day6.py  Day7.py
BASH/: othertest  test.cpp  test.sh  test2.cpp
C_C++/DictionaryParse/: freqDict.txt
C_C++/DictionaryParse/Headers/Dict/: Dictionary.hpp  DictionaryNode.hpp
C_C++/DictionaryParse/Sources/: driver.cpp  driver2.cpp
C_C++/DictionaryParse/Sources/Dict/: Dictionary.cpp  DictionaryNode.cpp
C_C++/SudokuSolver/: CMakeLists.txt  solver.cpp
C_C++/SudokuSolver/jSoft/Sudoku/Headers/: Puzzle.hpp
C_C++/SudokuSolver/jSoft/Sudoku/Sources/: Puzzle.cpp
Headers/: Dictionary.hpp  DictionaryNode.hpp
Headers/Dict/: Dictionary.hpp  DictionaryNode.hpp
Headers/Dictionary/: Dictionary.hpp  DictionaryNode.hpp
Prolog/Practice/practice1/: practice1.pl  practice1WordProb.txt
Prolog/Practice/practice2/: socratesIsAMan.pl
Prolog/Practice/practice3/: pallindrome.pl
Prolog/Practice/practice4/: lines.pl
Prolog/Practice/practice5/: harryPotter.pl
Prolog/Practice/practice6_ex2.3/: miniGrammar.pl
Prolog/Practice/practice7_ex2.4/: italianCrossword.pl
Python/AdventOfCode2020/: Day1.py  Day2.py  Day3.py  Day4.py
Sources/: Dictionary.cpp  DictionaryNode.cpp  driver.cpp  driver2.cpp
Sources/Dict/: Dictionary.cpp  DictionaryNode.cpp
Sources/Dictionary/: Dictionary.cpp  DictionaryNode.cpp
